# darts-2022

./: .cmake-format  .cmake-format.json  .gitignore  CMakeLists.txt  LICENSE  README.md  io_darts.py  leaderboard.py  plot_csv.ipynb
.github/workflows/: build.yml  mac-linux.yml  publish-leaderboard.yml  windows.yml
blender-darts-export/: LICENSE  README.md  __init__.py  camera.py  geometry.py  lights.py  materials.py  scene.py  textures.py
cmake/: DartsConfig.cmake
include/darts/: array2d.h  box.h  camera.h  common.h  factory.h  fwd.h  image.h  json.h  material.h  math.h  medium.h  mesh.h  parallel.h  photon.h  point_kdtree.h  progress.h  ray.h  sampler.h  sampling.h  scene.h  sphere.h  spherical.h  stats.h  surface.h  surface_group.h  test.h  transform.h  triangle.h
reports/assignment0/: report.html
reports/assignment1/: report.html
reports/assignment2/: report.html
reports/assignment3/: report.html
reports/assignment4/: report.html
reports/assignment5/: report.html
reports/final_project_proposal/: report.html
scenes/assignment1/: 01_plane.json  02_balls.json  03_refl.json  04_refr.json  05_quad-light.json  06_jensen_box.json  test_scatter.json
scenes/assignment2/: ajax-white.json  buddha-box.json  bunny-dragons.json  leaderboard.json  loewenfeld-in-box.json  loewenfeld-white.json  nefertiti-white.json  simple-geometry-no-bvh.json  simple-geometry.json  sponza-buddha.json  test_intersection.json
scenes/assignment3/: ajax-textured.json  blend.json  checker.json  constant-cornell-box.json  earth.json  fresnel_blend.json  loewenfeld-textured.json  marble.json  nefertiti-textured.json  teapot.json  textured-box.json
scenes/assignment4/: ajax-ao.json  ajax-normals.json  blinn_phong.json  odyssey_mats.json  phong.json  test_materials.json  veach_mats.json
scenes/assignment5/: group-pdf-ref.exr  group-sampled-ref.exr  jensen_box_mats.json  jensen_box_mis.json  jensen_box_nee.json  odyssey_mis.json  odyssey_nee.json  odyssey_triangle_mats.json  odyssey_triangle_mis.json  odyssey_triangle_nee.json  quad-pdf-ref.exr  quad-sampled-ref.exr  sphere-pdf-ref.exr  sphere-sampled-ref.exr  sphere_light_large_mats.json  sphere_light_large_mis.json  sphere_light_large_nee.json  sphere_light_medium_mats.json  sphere_light_medium_mis.json  sphere_light_medium_nee.json  sphere_light_small_mats.json  sphere_light_small_mis.json  sphere_light_small_nee.json  test_surfaces.json  triangle-pdf-ref.exr  triangle-sampled-ref.exr  veach_mis.json  veach_mixture.json  veach_nee.json
scenes/final_project/: test_photon_map.json
src/: camera.cpp  common.cpp  darts.cpp  darts_tutorial0.cpp  darts_tutorial1.cpp  example_scenes.cpp  image.cpp  img_avg.cpp  img_compare.cpp  math.cpp  nanovdb_test.cpp  parser.cpp  photon.cpp  progress.cpp  scene.cpp  stats.cpp
src/materials/: dielectric.cpp  diffuse_light.cpp  lambertian.cpp  material.cpp  metal.cpp
src/media/: homogeneous.cpp  nanovdb_medium.cpp  vacuum.cpp
src/samplers/: independent.cpp
src/surfaces/: bbh.cpp  mesh.cpp  quad.cpp  sphere.cpp  surface.cpp  surface_group.cpp  triangle.cpp
src/tests/: intersection_test.cpp  material_sample_test.cpp  material_scatter_test.cpp  photon_map_test.cpp  surface_sample_test.cpp  test.cpp
